# open-data-sci

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: continuous-integration.yaml  continuous_integration.yaml  pr-labeling.yaml  pr_labeling.yaml  pre-release.yaml  publish.yaml  tag-release.yaml  tag.yaml
libs/open-data-sci/: .env.example  .gitignore  LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml
libs/open-data-sci/dev/scripts/: test_pypi_install.sh  test_pypi_publish.sh
libs/open-data-sci/docs/: getting-started.md  index.md  requirements.txt
libs/open-data-sci/docs/api/: agent.md  config.md  index.md  memory.md  open_data_sci.md  session.md  session_manager.md  types.md  workbench.md
libs/open-data-sci/examples/: README.md
libs/open-data-sci/examples/configs/: config_anthropic.yaml  config_azure.yaml  config_bedrock.yaml  config_gemini.yaml  config_ollama.yaml  config_openai.yaml  config_openai_compatible_server.yaml  config_vertexai.yaml  config_vllm.yaml
libs/open-data-sci/examples/notebooks/: 030_notebook_anthropic.ipynb  031_notebook_openai_compatible_server.ipynb  031_notebook_vllm.ipynb  032_notebook_bedrock.ipynb
libs/open-data-sci/examples/scripts/: 020_script_anthropic.py  021_script_openai_compatible_server.py  021_script_vllm.py  022_script_bedrock.py
libs/open-data-sci/examples/tui/: 010_tui_anthropic.md  011_tui_openai_compatible_server.md  011_tui_vllm.md  012_tui_bedrock.md
libs/open-data-sci/opendatasci/: __init__.py  configs.py
libs/open-data-sci/opendatasci/_tui/: adapter.py  app.py  commands.py  completion.py  controller.py  file_refs.py  message_queue.py  models.py  presenter.py  service.py  session.py  styles.tcss  styles_visible.tcss  theme.py  tools_display.py  widgets.py
libs/open-data-sci/opendatasci/_utils/: async_utils.py  data_formats.py  datetime_utils.py  graph_utils.py  hash_utils.py  langchain_utils.py  message_utils.py  mixins.py  streaming_utils.py
libs/open-data-sci/opendatasci/agents/: __init__.py  _chat_messages.py  agents.py  agents_factory.py  chat_history.py  chat_memory.py  graphs.py  nodes.py  states.py  turn_memory.py
libs/open-data-sci/opendatasci/context/: __init__.py  base.py  local.py  plans.py
libs/open-data-sci/opendatasci/memory/: chat_memory.py  messages.py  turn_memory.py
libs/open-data-sci/opendatasci/models/: __init__.py  anthropic.py  aws.py  factory.py  google.py  local.py  microsoft.py  openai.py  providers.py
libs/open-data-sci/opendatasci/prompts/: __init__.py  builders.py  caching.py  message_templates.py  prompt_templates.py
libs/open-data-sci/opendatasci/resources/skills/: competitive_data_science.md  data_science.md  data_science_education.md
libs/open-data-sci/opendatasci/sandbox/: __init__.py  _runner.py  base.py  srt.py
libs/open-data-sci/opendatasci/skills/: __init__.py  base.py  local.py
libs/open-data-sci/opendatasci/streaming/: __init__.py  events.py  processors.py
libs/open-data-sci/opendatasci/tools/: __init__.py  coding.py  critic.py  dataset_info.py  factory.py  mcp.py  planning.py  skills.py  user_interaction.py  web.py  workers.py  workspace.py
libs/open-data-sci/opendatasci/workspace/: __init__.py  base.py  local.py
libs/open-data-sci/resources/skills/: deep_learning.md  machine_learning.md  quantitative_analysis.md
libs/open-data-sci/tests/component/: conftest.py  test_agent_integrations.py  test_cli_controller.py  test_lifecycle.py  test_real_streaming.py  test_service.py  test_streaming.py
libs/open-data-sci/tests/unit/: conftest.py  test_configs.py
libs/open-data-sci/tests/unit/_tui/: conftest.py  test_app.py  test_commands.py  test_completion.py  test_controller.py  test_file_refs.py  test_message_queue.py  test_presenter.py  test_service.py  test_session.py  test_tools_display.py  test_widgets.py
libs/open-data-sci/tests/unit/_utils/: test_async_utils.py  test_data_formats.py  test_graph_utils.py  test_hash_utils.py  test_langchain_utils.py  test_message_utils.py
libs/open-data-sci/tests/unit/agents/: test_agents.py  test_agents_factory.py  test_chat_memory.py  test_chat_messages.py  test_graphs.py  test_nodes.py  test_states.py  test_turn_memory.py
libs/open-data-sci/tests/unit/context/: test_local_context_store.py  test_local_work_context.py
libs/open-data-sci/tests/unit/memory/: test_chat_memory.py  test_turn_memory.py
libs/open-data-sci/tests/unit/models/: test_anthropic.py  test_aws.py  test_google.py  test_local.py  test_microsoft.py  test_openai.py
libs/open-data-sci/tests/unit/prompts/: test_builders.py  test_caching.py
libs/open-data-sci/tests/unit/sandbox/: test_cli_validation.py  test_exec_result.py  test_runner.py  test_srt.py
libs/open-data-sci/tests/unit/skills/: test_local.py
libs/open-data-sci/tests/unit/streaming/: test_processors.py
libs/open-data-sci/tests/unit/tools/: test_coding.py  test_critic.py  test_dataset_info.py  test_factory.py  test_mcp.py  test_planning.py  test_skills.py  test_user_interaction.py  test_web.py  test_workers.py  test_workspace.py
